--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-    <title>Forever</title>
+    <title>GoStore | Your One-Stop Online Shopping Destination</title>
   </head>
   <body>
     <div id="root"></div>
